[package]
name = "eth-handshake"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eth-handshake"
path = "src/bin/main.rs"

[dependencies]
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"]}
regex = "1.10.3"
hex = "0.4.3"
ethereum-types = { version = "0.14.1" } # , default-features = false, features = ["std", "rlp"]
secp256k1 = {  version = "0.28.2", features = ["rand", "rand-std", "recovery"] }
rlp = "0.5"
rlp-derive = "0.1"
bytes = "1.5.0"
concat-kdf = "0.1.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
byteorder = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
